Continue adding functionality to Replicator
git-svn-id: http://Marc-PC/svn/Full@1953 85f15e0e-5137-b144-a863-98bd542365a3

--- a/tools/Widgets/branches/lbross/src/Replicator/Replicator.resx
+++ b/tools/Widgets/branches/lbross/src/Replicator/Replicator.resx
@@ -136,6 +136,188 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox1.ErrorImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        /9j/4AAQSkZJRgABAQEAYABgAAD/2wBDAAoHBwkHBgoJCAkLCwoMDxkQDw4ODx4WFxIZJCAmJSMgIyIo
+        LTkwKCo2KyIjMkQyNjs9QEBAJjBGS0U+Sjk/QD3/2wBDAQsLCw8NDx0QEB09KSMpPT09PT09PT09PT09
+        PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT3/wAARCADvAQ0DASIAAhEBAxEB/8QA
+        HwAAAQUBAQEBAQEAAAAAAAAAAAECAwQFBgcICQoL/8QAtRAAAgEDAwIEAwUFBAQAAAF9AQIDAAQRBRIh
+        MUEGE1FhByJxFDKBkaEII0KxwRVS0fAkM2JyggkKFhcYGRolJicoKSo0NTY3ODk6Q0RFRkdISUpTVFVW
+        V1hZWmNkZWZnaGlqc3R1dnd4eXqDhIWGh4iJipKTlJWWl5iZmqKjpKWmp6ipqrKztLW2t7i5usLDxMXG
+        x8jJytLT1NXW19jZ2uHi4+Tl5ufo6erx8vP09fb3+Pn6/8QAHwEAAwEBAQEBAQEBAQAAAAAAAAECAwQF
+        BgcICQoL/8QAtREAAgECBAQDBAcFBAQAAQJ3AAECAxEEBSExBhJBUQdhcRMiMoEIFEKRobHBCSMzUvAV
+        YnLRChYkNOEl8RcYGRomJygpKjU2Nzg5OkNERUZHSElKU1RVVldYWVpjZGVmZ2hpanN0dXZ3eHl6goOE
+        hYaHiImKkpOUlZaXmJmaoqOkpaanqKmqsrO0tba3uLm6wsPExcbHyMnK0tPU1dbX2Nna4uPk5ebn6Onq
+        8vP09fb3+Pn6/9oADAMBAAIRAxEAPwD2aiiigAooooAKKKKACikBB6GloAKKKKACiiigAooooAKKKKAC
+        iiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAK5LW7i71rxENCs7hra3jj8
+        y5lT7xHp+o/P2q/qHjTR9OuGgknaWRThhEu7afTPSsTw/qEOqeNNTu7bd5Ult8u4YPG0f0rnqVIyagn1
+        Jb6FeHSdNnW4k8MandLf2gLncxxIB+HI/Sus8N6udb0WG6cAS8pIB03Dr/jXC6frml6JozmxilfVJ4tk
+        jv8AdT6f/Wq34T8Wadomjm1u/O8zzWfKJkYOPf2rGlVjGS1S79hJnolFUdL1iy1iAy2M4kC/eXoy/UVe
+        rtTTV0WUpNZ02F2SXULRGQ7WVp1BU+h5qxb3MF3EJLaaOaM/xRsGH5iuE1mztpfjLoqSW8Lo+nzMysgI
+        Y5PJ9TRrMaaD8T/Do0eJYBqKyx3cMI2pIqjIYqOMj19qYHoFFZb+JdHjvDatqNuJg+wgvwG/uk9M+2c1
+        Yu9WsNPmihvL23gklOI0lkCl+ccZ680AXKa7rGjO7BUUZLE4AHrWdD4k0i4luY4dRtne1QyTAOPkUdW+
+        nvVDw54t0/xGs6Jc2rObiWOKIN80kanAbaeeRz9KANu1vrW+Rms7mG4VTgmKQMAfwqeuJ8AIseteLkjV
+        VUaqwAUYA+UV0c3iPSba8+yzahAk24IVLcBj0UnoD7HmgDToqpf6tYaWqNqF5b2ofIUzSBN2PTP1qCbx
+        FpFtqKWE2o2yXTkKI2cZyeg9iewoA0qrvf2kV0ttJdQJcP8AdiaQB2+g69qW8vbbTrV7m9njggT70kjB
+        QPxrhfE2oafqvijwhcWE0UxXUGR2UfMPkyAe4/GgD0Gqeoavp+kqrajfW1qH4XzpAm76Z61crgdA1PT1
+        8e+Iodbkhj1T7Qq2v2jAzb7RtCE++SQOuaAO2tr61vQDa3MM4Kh8xuG+U5weO3B/KrFYlholpomr6pqc
+        Aht7a7ijaRVG0KybtzegBBH5Gq/hzxjp/iCW6SO7tty3TxW6K/zSooHzYPJzz+FAHR0VmXPiPSbO7Ntc
+        6hBHKCFYM3Ck9Ax6An3qt4u8TW/hfRJLuSSIXDDbbxuf9Y/HH4ZyaANyiqlvq1hd20lzb3tvJBFnzJFk
+        BVMDJye3FQ6f4g0vVZTFY30M8gXdtVuSvqPUe44oA0aKKKACiiigAooooAKyfFF3LY+G72eAkSBNoI6j
+        JAz+Ga1qhu7WK+tJbacZilUow9jUyTcWkDOIa4g8J+HdOmtbCK5mvF3yTSDIBwDjP48fSs3Stfup/EF1
+        d2uniS6uoRFHDFwinjk+3FbUFr4m8PRmztIINSslP7oueVHpjI/rUH/CQ+I7q6n0+10+1t7uNN0m37yj
+        15OO4rid1bdeViCKHTdP8LKhvIxqWsSDMdsgyqf59T+FVx49m76TZEegB5o8DO0+rajLMxklNsxLsckn
+        I70vhi+1u30kJpmlw3MIkY+a/Xd3HUVMZOy5dFr0uI0p4Y9K8YaRc2MX2caiuJoBwBnHb8fzFdtXMaLo
+        WoTav/bGvOhuVXbDCnKxj/P866euuimk3a1y0efeIrZrz4v6HClzPbE6dKfMgIDDk+oI/Sr/AIj0ZNA8
+        O6zrVrLc3WrpZOsd1cSb5I1x0XoFHU8AVpXfhJLvxLDrh1K8S7gUxxBRHtRD1XBXnPPJ55rdljSaJ4pV
+        DxupVlYZBB6g1sM5fTdPsz8K4bUxobaTS8uCOCTHkk++TnPrXG6pLNq/wd8MvqBZ5Zry3jZ2+8y72UHP
+        uAK7ceDmj046TDq13Ho5Up9lCruCHqgkxuC9vXHGan1rwha6zZWdl9ouLS0s2R4obcIFDJ908qTx6UAa
+        EOiadb6m2oQ2kSXbQi3MgHPljouOmK5r4VKv/CIFto3fbbjnH/TQ12EKNFAiPK0rKoBkYAFj6nAA/Ksf
+        RvDKaDHcQWN9crbSNI8cJCERM5ySDjJwemc/jQBjeBWCa34xZiAo1ViSew2isHWZbeX4a+IJdA05xpNy
+        0s5ubic5lcsNzImCcZHGSOldpo/hOLR7q+mW+u7gX7tJcxzBNsjkYJ4UEcdhxWdB8OrWLRJ9Fk1TUZdK
+        cMIrUuqiLJz94DLYPIBOPY0AU/iATJ8I5HY5kMFudx5OSyc0vjnTodM+Et7BAvKRxuXP3mfepLk/3iec
+        1tal4RTV/DsOjXmo3Zt0ULIUCKZACCufl4xgdPxqTWPC665oI0m81G8MBG2VlEYaUZBGTt4xgdMUAYHi
+        SWS68aeCrS4+a1dpLhgejSrHlc+4zn8aPG1rAvjzwddKoW4e7eNiOrKFyM/Qn9a6C+8MRahp1nBPd3Bu
+        rGQS214NokjYdOgwRjgjHIqjeeBxqV/Z6jfavePqNm+6GdFRQgx0CYIx39TQB1Vcvqfh3w/48jmN/Z75
+        bSZ7bzVO2RSp55Hbvg+tdMgKooLFiBgk9TXOf8Ie1reXd5pOr3ljc3czTT4CyRuT/sMCAQOMjHvmgDD8
+        KWd74T8cT+GRezXulTWf2u3Exy0GG2lc+h5/T3q58MFUaHqTELkardc46fNW9ovh2HSLi4u5Lie91C5w
+        Jrq4ILMB0UAABVHoBTNH8MxaJNdfZbqc2lxM85tWClQ7/e5xnHoM0AcXqk1tP4G8Uz+H9PZtNujPNLd3
+        E5Alk6M0aYJxkcZx0qz41YyfCHT3c7mZbIknqSSla9r8PLW30u50k6nqD6TMXK2e9VWPd1G4DcQCcgE4
+        9c1fufCVvfeE00G9up5okVFSb5VddmNhGBjjA7c0AYfxP86S20PToSkdvfanHFOWXKEdQrAYyCR074rT
+        u9A1W81DSru81KwjGn3IkQwWrIzAjaY8lzgMDjp6VpXvh6HVdGbT9VnmutzBxMcI6ODlWXaAFI7VHBoN
+        w00Dapqs9+lu4kijaNI13DozbR8xHUdBnnGaANqiiigAooooAKKKKACiiigAri9QnXw944a+vFYWV9F5
+        ZkAyFOB/gPwNdpUN1awXsDQ3UKSxN1VxkVFSDktN0Jo4e3/sfwrBe3dvqaXs1xGY4YkwSAemcfhzx0rf
+        8F6fLp3hyFLhSskrGUqeq56foBVm08L6PZTiaCwjEgOQWJbB9sk4rWrOnScXdiSCiiitygooooAKKKKA
+        CiiigAooooAKKxtQ8S2umzyR3ACBGCb5JY4wWKhsDcwJ4Iqr/wAJtp2M+Zb/APgXF/8AFUE8yXUsa281
+        tf21ysNzLD9nniIgQuQ7bCuQP9089vaquoabfzeHdFtI3miuopIPMkQ5KFV6t6jcBn1pv/CdacMgy2gI
+        7G8i/wAaP+E607GRPZf+BsdAc8e4kMeo3HgzUfOtp4b6Z7hhDnLAlzjafT09sVd8RJfRC3vNLjkluE3Q
+        GNTxtkGAxH+ywVvoDVA+PtOH/Lew/wDA1f8ACk/4T7T8jE1jg9/ti/4UXF7SPcl8Q6c8ej6XawpJPFBO
+        gkzC82VEbDLKpBPOO/WneK9Ou9S0+xhsIwWDM2GVgo/dPjIBBBzjHPBx1qo3xE05SQZbPA7/AGr/AOxr
+        e0bVk1i3eVEChWABV9ysCoYEH6MKBqcXszN16Frjw7ZsI7qSSPa6wSQtIZW2H5ZQvP49mwavXKXEt5o0
+        ghdAsjNMqnITMTDBPfkgVq0UFGHFpMSeMJr0W2FNspEvOPM3MG/HGP0ot9Mmj8SzM0kxsI1FxDGc7RM+
+        4Pz3AAyB2Ln2xuUUAFFFFABRRRQAUUUUAFFFFABRRRQAUUUUAFFFFABRRRQAUUUUAFFFFABRRRQB5R8S
+        p2t7/wAxUVyZJk+YZwDDGM/UZrQ0zRNMfS3LWB+0Wdp585+0ud7EZVSP7rAbuOlQfEWzedpvKjuXczsF
+        8mIvyUiyDjoMZP4VEninWY4Uhg05RF5SxSFtMlcygDb8xzzxUnK7Ko7mf4q0lbC7tmsYQnn229ojvccl
+        scNyCAo+lXvCGgaXqE8UF9YtKZ7feZmkZQThScYOCfm6dgKztZmvtX8sR6RcwlFCbYLGRFAG4k9c8lqu
+        6drmsaVZ28NnoRdYckSPZS72bGN2exxxQSuXmuyn440PTtOjtJrC3Fq01xPE6ozOp2NgcHpx6Vd0HTrA
+        eHDe3+mw3h8mWRT5rmRzvKhVQDAJYgcVV8Rzax4isrZZdDuIpIXd9sVnIqsWILEkn2q1pmo6zpGlw2tt
+        oksskRZkkmsXLJk5wOR0PegS5edu2hW8U6fpjWRm021SyDR+aBHIxMqbM8r0GGGD3BHNdx4AwdCBAxlY
+        v/RKVw2pz6vqOlSW0miNA7Evm3sPKLMQRgndyOSeld74Ht5LTSWgmQpJEIldWGCD5KZBpo0p6zujpaKK
+        KZ0hRRRQAUUUUAFFFFABRRRQAUUUUAFFFFABRRTXdY0Z5GCooyzMcAD1NADqK5LVPHttCpj0yE3M7EbN
+        7KisPVQSGb2wOfWuQ07xbrVvqIuDPPdFt2+CUYX3zlsJj1Xp39KzdWKKUWeuUVg6T4w07VXjiBaGZ8Ko
+        cqys390MpIz7cE+lb1WmnsTsFFFFMAooooASiqWryXEdgTah929Q5jXc6pkbio7nGa5jxHqcMenlNNvt
+        QNzHNGJghlLohPzHGOOKCXKxm+OlnutWjtYZ5od07E+U5XcfJBGcf7prFsvCl7PIUuNTvFYjco81vmGe
+        B1ok1uS+v5ZJJPtH2K7h2SkDLRtvQk+pBYDNa95K72iRwNtu2XCO3Tg55/KpMEozbkzkZ7aOSylnttTu
+        gyEIEeRs7s4xjOa1fD/hC41NDeand3MFmzrFEUcuZWLFOOcjDAZzUuiaJaeJ/DeouYguqx3BP2sfKig8
+        g4zyBgg8ZG6vQfDtlc6bouk2c0MI8uIiXy5NwDdQQe+cnPvQiYU1J3a0PIW0qQX/ANkhlu7+czMiGIkB
+        wDjJOfl6HqenNTaV4cOq2MrLclZ43ZQRISH5wMeo75711Oszaf4IS/srZnZtWVwqySfdzkGQnHCjOAOp
+        wa5W1Or77aCC3nS2eSLZKybAy8dz6kE0EuMU7NFy68Cmxgdr26YtsZk298elej+CQf7HbPrGOvpDHWH4
+        vu2g02PzQjPu8o7RnLMMYH6Vzck+tX0moWeni6aytHMSrbxt/rMBcll9Nvvx2pmto0pe6j2OiuUC6c1g
+        0Fmt1JqMUYXdCkqssm3gkngc889q6iLeIUEpBk2jcR0z3pm6dx9FFFAwooooAKKKKACiiigAooooAKKK
+        KACuR8dXcsscGlW7bWnwzn8flz6jhmI77Md666uI1ctL4xl3Rs6xoACvJHyr2/7aH86xry5YNouCvI4z
+        Xre3sLaBGMaTBy0gdvnm/wBsHqe/0qG91K0e2mdLiCSS5+9CC2Y/mBHJXnpz05p9zpw1nT9R15rvBim8
+        vyPLJIUnCc54GP1zVS+0YWejaXfc4vFkLZ6Da2B+lYRp6K56kMHGSV3q9Pwv+Rr22npd6TDLaFJJY0/e
+        SxHAkAOfLz1J6c9VIHNel+GtRbU9FikkffKn7t2x94jo34gg/jXnej2q6Br8dily10l5biYqsRUo2Ny8
+        c87c5/Cuw8EFkW/hKlFRwVBPPVl/kgqqLcajizixFJQ2OqooorrOUKKKKAKup3D2ml3VxEoaSKJnUHoS
+        Bmue121u9G0LUdWs9TumvfLWRiyoUOMD7u3gYJ4rqJolnheKQZR1KsPY8VwckD3HlwXX2u/CRSQXEc0o
+        ihgcHarA8A8A/wB48g0ET2OX1B5JvFkkF+ER9VtvIdwmwbyBsbGTj5lU/jVbTre71m+WG81FNOV42CEA
+        n51U5TPY8cgke1bWqaYNW8K+Xv8AM1WwlMZaP5jIB91hjsRgg+9c5dSR3cSajNFvRpBHfRq23yZ+nmcd
+        nxn6g1Jyy0l5HWaJ4a1DRtasLnRtSsmhliQP50ZVpIyQWAIGGPHGDkd67bVop7ZYZrMgg3KeYrsflVvk
+        JX0xuzivL9B1DWLK/tLe51drG0VSYvNxJE4X+AZ4U475Fei6pq9vc+Fbm9tJZPJaIlWX7y4/iH0x+lNG
+        1JqztoHiOTTdOjXULxLONYV8tp5og7+yIO5JzXD2upPqmrw3t1MI7WN2NpZu3zIOpc88sQT610Hi3xHo
+        VpJBYX1ut5tj3RwiMu/zKQDk4C5B65J+lcnp2n2lvbT6pqYSCdfuRxjCRr+eSTnHPvQwk7ysi/rl5G2p
+        eS5DQwTG9c5z8iAHn6tgVD4fudXXwg88F9JCWvVKwxqA0pkcA5brg89KxbxpbyWOxRSLzUnRpEJwY4hy
+        iexP3z/wGu41q2mRtM8P6VsiktlSYu7Yw/RfqR8zcc/LSM0+aTkdDNZDRrqC5tri5Y3Nykc6yylw4YbQ
+        eehGByPSt6ueW5vb7V7SxvbNITAftLSRzb0dQCFxwCPmI4I7V0NUdSCiiigYUUUUAFFFFABRRRQAUUUU
+        AFFFFABXn3i5PL8QuzHAbaeSAMFQO/H8B9fb1r0GuO8eQNCsF+iu21SjBGKkkZYDI5GR5g/Gsq6vAuD1
+        OO8Jr9otNY0on/j4s2ZB6vGcit7VNNTUPCmlafCp8+0lt45PbzVGf/QhXPaNJNo/jOzkuVWMTS5wDkbH
+        +U9zxk9/aunsNZSDxL4pL7dkMfmoD0BiG0Y/HFRBpo9qcpO1SHZP5/C/wOW1C5W88Z3MylfLWVwmSAAq
+        rsHXjHTrXeeA4yLS5k5IbYMk/VvU/wB8d6830mO5G+8SMsjEQBxIVIckZIwc8HHtwa9b8K2v2XQoTjBm
+        zLj2P3f/AB0LSp+9UucOPkuflj0svuNiiiiuk4AooooAK47xZo0L3kc8lv5kFxIm8xpmVZB0VDkbd/Ck
+        +3vXY1FcW8d1A8Myho3GGFApK6seeC8ks9VNyttAiRReTd6dAOUiUhQh7Mw3Agj7wJHYVharYy6dcf21
+        pFp5+m3KEXETfMkiHscf/rB967G+iutJNnayMPIiuWmWcxtK07tnaNo/jBYnkgHAPYgZcBmtI727s0kj
+        C3CwvZXal/tMjcnKqPkfkfdBGPzpHPKN1ZnH3bINEc2TG40hmG3zBmSzcnO18djzhuh+vFaN5qs3hUPo
+        ct5BqunS2+5UVcCFjyu09fQ/Q0uoxwpctqml50+aQN51tcrmGZcnK5+6RkYwcfmKz/7ETU3YaFFGbtci
+        WwaQF48jBMbE4dP1H60jB8y23/r+rE8U17qKP4kv57aZGuFgkV3IePoQFHQL/wDXpt7qGWjvZ0yX2mys
+        mHLntJIP7oPQfxH2qtHYW9hP5e+2uLrPG+TNrAemSx/1jew+X69K39CgtYLwTRk3+sOC7T3GREpxnPTJ
+        4yMY545oKjzNWLPhvRjoajWNVRrnVrpm+z2xGZJH7/T1J6YzV3S1sry0ubzUrpE1JXcTrMzKjlvupKuM
+        gDZwoP3QM9cVWk07UpbWO7vFE2oNA10A0m+OaE43Ko42FNwYDOGPUntv6RoQ1K7tr++USxW8SpDLJEUk
+        uAAMF1yeB2PU/TqzaEbaJGp4X002WnCWQMskwG1WGDHGM7Vx26k47Zx2rbpKKZulYCcDJ6U2OVJV3Rur
+        j1U5rm/EfiJrZmtLMssqn52ZAVKkdj+NcnDdT28XlQzSRoXDkIcZIrlqYqMJcqVwcj1OiobSVp7SKV42
+        jZ1BKt1H1qaulO+owooopgFFFFABRRRQAUUUUAFUtW05NW0ya0kO3zB8rf3WHIP4ECrtFAHkN1ZBo206
+        5UWtzbyZif8AuOOcZ7jHT1XB7Vj29lqk97IbhngS53Ca4JGJATk49c4zzj+leua/4YtNeUNJ+6uFGBKB
+        nI9GXow7+o7EVzMHw+vpLp0u7m3Fvzl13O0gJyPlY446c7q5XSnF2jsddPFShFpMoaRpUet6jb2cEIWy
+        t1Bdh/c+v+1yB65Y+lenAAAADAHQCqml6Xa6RZi3tEIXqzMcs7f3mPc1cranDkVjmlLmdwooorQkKKKK
+        ACiiigCOaGO4iaKZA8bjDKw4NcvqXhNwsptCblG8x0jlkIeOVlAEgbuQAMZIx611lFAmk9zgVhCalIst
+        ithKWiS3nlbYqRqctnP3ixLZHIORzXTHQ/D92fMFhp0hP8Sxp/MVrkBgQQCD2NVW0qwc5aytifUxL/hQ
+        So2KcdjoGmMGjt9NtmHQ7UUj6Vntl/FKajpcM1xHLbtFPtYxxll+4xJ4bgsO+OK3otPs4WDRWkCMOhWM
+        AirFA+UxbXw3CLo3N1hzgBIFJMUYByBg9eeccD2rapaKCrWCs7Wb2K2tfIkJEl0DFFgdWI4+lJrOsQ6T
+        bkuy+e6kxIwOGI+lcncqb7zNS1Z3t1nUNbCM5VmAx05x0Fc9aty+7HcTZUv5by2t49KuljAtzuG3k5PP
+        X8aIorabQ5TGmb6KTe3PJj9vpVAsX+ZmLE9STmjuPWvM5tSDstN8RadY2DQqZfKg2hCxy8meTx7GtrS9
+        Si1W0FxCCoyQVJGR9a4rUdBOm2lv5jmW8nfCpGMjbj+dbPhbTLoKlzdmSNE/1MYO0HPBLDv+Nd1KpU51
+        BopNnUUUUV2lBTXXcjLkrkYyOop1FAHPeEtQurmO/stRmM13Y3LRs5ABZTyp4/GqfhbX57/xDqlpPK8k
+        JYyWhcAfuwxU49RnFU/EV4/hvxNc3kYO3UrJkQAdZ14X+Y/Ol1S0XwofDuoc+XaL9luSOcqwzn88n8az
+        v+B6fsoSTdvjWnqld/joW7+/vjP4kmtr2VYLGBViAAwsu3c2OPoMe5qnea9fpp/h62N8bb+0Y90966gk
+        cDgdh1/lVmKB0+HOoXMwInvYprqTPq+SP0xVzS7XTdU8LaZp2oLDKzWqOsTnDYxjK9/yo1YXhBXcbpO2
+        3ZWv9+pcsNNudLnkuJtYubu08olkuNp2ng7gQB2zxWPp8mseLle+TUJNM04uVt44EHmOBxuYmqS2Vxo/
+        iIaBp97JcWN9bSboZG3G3+UgHPYZxV/wHqkSaSNIumEF9ZM0bxOcEjJOR69aE7uwpQcIOpGzenTprrb1
+        Jru7vfCWlzPdXr6pNNKsdmkihW3HscdR3qWPQNXuIRLeeILuO6YZ226qsSH0AI5H1ql45YSQ2l1aOs8u
+        mXC3EsKHLBPUj8P5101lqNrqNkl3azJJA43bgen19Ka3sZzlKNONRLV76L5L9fM5u11y/VNV0jU5Amo2
+        lu0sVzEAPNXGQ2OmelP8H+Irm8C6drBxf+WJonOB58bDIIxxkf56GqExXWfEmr6nandZ2mnvbecPuyPg
+        kgHvjJq7NoTat4S0m4sm8rUrS2jktpRxztHyn2NJNm040uXlkrXt8nb8u6Hapq17p2razJFK8sdrYpNF
+        AQNoZiQT0zgYz19aj0iy1DWdLg1GPxLcm4kAdlRU8pT3Qrj8Kg8O65FqOu6heXqi2K2kMNwsvAVw7Ajn
+        tkjr60zxLodt4es5Na0O7bT50IPlI2Y5snpt/p0o8x8qjJUrWlprZNbbf8E1pLy6/wCFgJYi5kFo1mZj
+        FxjdnHXGazPDvia8h1RrPWJGkt7meSO0uHAHzIxUocfh/k1NaSyz+P7GWdPLmk0kM6f3WLcil0rRrfXf
+        Ct5Z3HGb24aOQdY2EjYYUa30Japxhaa0svlvr/W5q6lPcR+J9HhjuJEgnEvmxjGG2qCO2e9bVcHpOpXk
+        /ijStN1RSL+w89JH7SqUG1h9cV3lVF3OXE03T5Yvt+r1+4KKKKo5gooooAKKKKACiiigDJ1uGW6aC2S0
+        Esc2UebAJhHqK4q9DafqZtmkaeK1kG1XPB79O1ddr2sPBbyxWKNK4VhLJG3MB7E1zkM1tqMKNc+VFPbf
+        vJJJCCbo/wB015+I5ZSsnqSzOvboXl286wpCGx8idBxUFT3txHdXTywwLbxtjEa9F4p9hc29vI32u1W4
+        icYIzhl9wa43rLVkkZvLlpInaeRnh/1ZLZ2fSt/w3rVy180EiS3Mlw4ZnL8IoHXFGs2Vu9laS6WIZra2
+        Us8QOWwe574rQ8MvpMgQ20McV7sJZdxZgM+p/CuqlCUalub/AII1udHRRRXpFhRRRQBl6n9hurqK1vLY
+        zSRFLiMkD5TvCgg59f0qpd6vpuq6bJFcWk08MgZZISg3KQhcqRnIbA4/DHXNbb28MkqySRRtImQrMoJX
+        PXBpq2lujKywRBk+6QgyOMcfhx9KClKStrsZF1qemTafLbS27y2a2wlIGNrxZIGOeh2/liqU0Ph6/t7O
+        3l05mjjjjNuDlSqyMFG05zjJGcHjj2romsbR/vWsB+UJzGPujoPpz0oFjaqci2gByDxGOoOR+vNKyHGp
+        OPwtoxtL/svSmVbHTZIGuJmg34DFnXOQWyT2J59Kh1v+wL2eVtRsPPeAuhlVcEsiByuQQfunvxXRC1gG
+        MQRDa5kHyDhjnLfXk8+9NeztpWdpLeF2kG1yyAlh6H1osg9rPm5ru/cw4pNG8LrFFb2LQLe4OVwd56YJ
+        J9/1qjd2PhdZZZrnSzFzJvxlVJQZIwpwT7ex9K62SGKbb5saPtORuUHBphsrYsWNvDuJJJ2DnPX86LIa
+        rVE3JSd35mbLcWEFsdNksmjgCxpJEgAVBIxRM4PQkHp+NN0/WNOhtLeC0hliiDiBY2GPKYjIRsng+nrk
+        YzkVqLZWqlCttCCn3SIx8v0o+x23y/6PD8uMfIOMDA/SmQ5Nq1zCSXQ728maW02SX9upl80ALLHt3Z64
+        OMgHuMjtg1Bbaf4ZstWjigsB9oDqIy2WUAqWDrkkAfKRn1rpY7W3i2+XBEmz7u1ANvGOPw4+lElnbSsW
+        kt4XYnJLICemP5UrItVqiVlJ/eYaX2jz6hDqS2shuJECicjBUF/L2nn+8cdPenabqWlafEkNjbSQi42S
+        JH/fZ+mMn8zWyLG1EolFtD5gJO/yxnJOTz9aQafZhdotYAuAuPLGMDoP0FOxLnJqzZkw32lalrFncC3c
+        Xmw+RKy7SykHcOvOMcjtkHoc1vVEttAhUrDGpXkEKBjjH8uPpUtAm29wooooEFFFFABRRRQAUUUUAc/r
+        2ky/Z7ifT3EPmKzXCKpJm9P61yzRxXUVtbQ2bw3EZxPKQe/cjtXpNU10u1Wa5lEfz3I2yncfmFctXD8z
+        uhNHnV9aizu3gEyTBcfOnQ8VBXQa54ZaxWe6tzGlogGI8kt2H86TQfDkOrWTXEs8iFZNoCAdsVwujPn5
+        bE2MW1Z4pPNV5Iox8skqDO1T1rpLPweWm8z7YwtioMbR/K7Ajv6V0lvpdnaGQw26KZcb+PvVaAwMDpXZ
+        TwiXx6jURsUYiiSMFiFAGWOSfrT6KK7CgooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiig
+        BrOq43MBn1NOrE8WWkN1oriVAWDoqvjlcsAcfnUOgX81rcyaHqTZuYBmCQ/8to+x+ooA3hKjEBXUk9ga
+        fWDp1pZ2mvatMIYohF5ZDYxtBXJ+lTHxFCLU3a2l01kP+W4QYx/exnOPfFAGxRWVqHiG10+2guCk00M+
+        NkkS5Xnpk0i6+j3stpHZ3ZnSLzVVkC+YM44yaANaoo7qCaRo4po3dRllVgSKxtA1m51K1Ek1pKRJK43r
+        t2IM4x1zx9Kp2bRab4t1YW9q5XyoiI4I++OfanYR0l1E89rLFHKYndSA69VPrWdYXN5AlxazW80ptU+S
+        dj/rz7VNpetQapJPEsc0M8BAkimXawz0P0pj69EElmht7ie3hJDzRqCox1xzk49qhwu7gUpLbWNctzHd
+        eVY27jmMDe5/wqWy0a90iIpY3iSx53GKaPAJ+o5FTX/iK0sbOG62TTQTAFJIkyvPTJ7UDxBCb57X7LeC
+        RYjKuYvvqDjgdTUKir3e/cCddSlUYnsLlHHZFDg/Qipbe4uJ5MvamGLHBdhuJ+g6fnWdD4ohubNrm3sb
+        6ZVYqQkXIx171oaZqVvq1kt1asTGxIIYYKkdQR61fK1uwLdFFFUMKKKKACiiigAooooAKKKKACiiigAo
+        oooAKKKKACiiigAooooAy/Ef/IHf/rrF/wChrUfiHR21K2Sa1by7+2PmW8g9f7p9jUusW9hdJHHqLPs5
+        ZVVmAOOSTj0qwk9tZpFAJHb5Ny5y5K+ufxpgcdNfTaroGvzrE8cxWJZY+4KjDD+ddbbS27eH4pNy/Zvs
+        wOe23bToo7KK9uPKUCa4I80AHDEDv2ziqVtpGkXAKwI5gY7/ACdziI8/3enXtQI5wRyR/D6y8wEBrtGQ
+        H+6X4ruyB1wM461l6hZaXqdqJrpi9vDkYV2CqQcdB6VZtZbW1s8RzMYkbZ87FmB9Oec+1DAzPBX/ACLq
+        /wDXaT/0I0af/wAjrq//AFxh/lU9tp2l2s4eASxNPIcIHcLv6n5elP0/SNOW5N/aGUysSGkMjHdjjBz1
+        oAzZBJ/wlWteTnzDYLtx64OKPDMD33hm1SHUJI1VDG8aovynuDkVdh0/Sorxr+NpvOBG6TzHO7nge4zT
+        f7L0WZpdQjDRDG6R43eMHvkgYzQBR8QadHpXg+Kzhd3SKaMAv1+/muqwMg4Gcdax9S0/SZooYLzzDEoG
+        xA745PB46n61ZjitBbfYkml2tH5gJkbcF/3uooGZ/gz/AJA83/X1L/6FR4PGLK+44+3S/wA6nsbHS7OC
+        4js3ljR03uBI/T+8P8RUmk2Gm2UgbTi+Jk8zAkZlYH+LnjNAjVooopDCiiigAooooAKKKKACiiigAooo
+        oAKKKKACiiigAooooAKKKKAM/VNPkvzCI3CBN2Tk55GB9R6j0ps1lPLPBLiMGOIoVVyoySOmB04rSooA
+        o/ZJRqYuEKopz5m0n94McZHTIPeorSxubW0eNSnmFSA29iMkk9O3WtOigDKbS5Utb23hZfKmAMe5jkHG
+        Dn8qE02eOKMK6M0M3moWJy4IIIY+vPX2FatFAFGe1nupLZpBGBHIWYKx6YIHPrzUmnWz2lmIpCpYMxGC
+        TwSSP502/nng2GBC4YMOFz82Pl/WqbXeoCTaI2JDsMiP5W6YHsOvNQ5paCLNnZy2zT8osbj5YlYlQ3OS
+        M9AeOKbHYS/2fbWkpXagxLtJ5A6Y/GmC7v3tro+QyShgYcr1UnH50pvr1WZBZlipxnOM4B/nj9aPaIBV
+        sbkWFrAzRs8Eqtkk8qp47dcVJdWL3NxIdwWOS3MOR1BJ61El/eyPGDa7ASu44J4JOf6UjXt7FcSJ9naV
+        fNwGAwAv+P6Ue0QDxZTuQ8hjDxwGJQpOCTjk+nQU6z09rS5Z1cCJkH7sfwt3I9jUZvb7A/0M7gAx2ng5
+        7fX1qazup55nWWDy0CghuRk/Q01NPQC7RRRVDCiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooA
+        KKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooA/9k=
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAkAAAAAAAEAIADDEgAAlgAAAICAAAABACAAKAgBAFkTAABgYAAAAQAgAKiUAACBGwEASEgAAAEA
